codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_mcp_startup_failure_renders_warning_history.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---



⚠ MCP client for `alpha` failed to start: handshake failed
⚠ MCP startup incomplete (failed: alpha)

╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ › Ask Codex to do anything                                                                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  gpt-5.6-sol default · /tmp/project
